[gd_scene load_steps=11 format=4 uid="uid://c5cff1stfno0j"]

[ext_resource type="Texture2D" uid="uid://btue1udj2y7bs" path="res://Assets/Tiles/Grassland.png" id="1_72vrb"]
[ext_resource type="Script" path="res://Assets/Scripts/tilemap.gd" id="2_fvnuu"]
[ext_resource type="Texture2D" uid="uid://iq2vdmbaleq2" path="res://Assets/Tiles/Water.png" id="2_v1vw5"]
[ext_resource type="Texture2D" uid="uid://b6vwrbbmjrvcj" path="res://Graphics/MasterTileset.png" id="3_16xo3"]
[ext_resource type="Script" path="res://Assets/Scripts/UI.gd" id="4_j5su3"]
[ext_resource type="PackedScene" uid="uid://78dhmemtgfvq" path="res://Assets/Scenes/ui_tile.tscn" id="5_mvtnu"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_sjf3l"]
resource_name = "Grassland"
texture = ExtResource("1_72vrb")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_10lmh"]
resource_name = "Water"
texture = ExtResource("2_v1vw5")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_5xp17"]
texture = ExtResource("3_16xo3")
texture_region_size = Vector2i(32, 32)
2:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
2:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
2:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
2:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
0:13/0 = 0
1:14/0 = 0
2:14/0 = 0
3:14/0 = 0
4:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
0:17/0 = 0
1:17/0 = 0
2:17/0 = 0
3:17/0 = 0
4:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
0:20/0 = 0
0:21/0 = 0
2:21/0 = 0
3:21/0 = 0
4:21/0 = 0
2:22/0 = 0
3:22/0 = 0
4:22/0 = 0
2:23/0 = 0
3:23/0 = 0
4:23/0 = 0
2:25/0 = 0
0:26/0 = 0
1:26/0 = 0
2:26/0 = 0
3:26/0 = 0
4:26/0 = 0
2:27/0 = 0
0:28/0 = 0
1:28/0 = 0
2:28/0 = 0
3:28/0 = 0
4:28/0 = 0
0:29/0 = 0
1:29/0 = 0
2:29/0 = 0
3:29/0 = 0
4:29/0 = 0
2:30/0 = 0
3:30/0 = 0
4:30/0 = 0
0:31/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
0:27/0 = 0
1:27/0 = 0
3:27/0 = 0
4:27/0 = 0
0:9/0 = 0
1:9/0 = 0
3:9/0 = 0
4:9/0 = 0
4:2/0 = 0
3:2/0 = 0
1:2/0 = 0
0:2/0 = 0

[sub_resource type="TileSet" id="TileSet_buasj"]
tile_size = Vector2i(32, 32)
sources/0 = SubResource("TileSetAtlasSource_sjf3l")
sources/1 = SubResource("TileSetAtlasSource_10lmh")
sources/2 = SubResource("TileSetAtlasSource_5xp17")

[node name="Main" type="Node2D"]

[node name="TileMapLayer" type="TileMapLayer" parent="."]
tile_map_data = PackedByteArray("AAAQAAEAAgACABwAAAAQAAIAAgADAB0AAAAQAAMAAgADABYAAAAQAAQAAgADAAoAAAAQAAUAAgACAAEAAAAQAAYAAgACAAEAAAAQAAcAAgABAAEAAAAQAAgAAgADAAkAAAAQAAkAAgAEAAwAAAAQAAoAAgADABQAAAAQAAsAAgAEABMAAAAQAAwAAgAEABcAAAAQAA0AAgADABoAAAAQAA4AAgAAAB8AAAABAAEAAgAAAB8AAAABAAIAAgAAAB8AAAABAAMAAgAAAB8AAAABAAQAAgAAAB8AAAABAAUAAgAAAB8AAAABAAYAAgAAAB8AAAABAAcAAgAAAB8AAAABAAgAAgAAAB8AAAABAAkAAgAAAB8AAAABAAoAAgAAAB8AAAABAAsAAgAAAB8AAAABAAwAAgAAAB8AAAABAA0AAgAAAB8AAAABAA4AAgAAAB8AAAACAAEAAgAAAB8AAAACAAIAAgAAAB8AAAACAAMAAgAAAB8AAAACAAQAAgAAAB8AAAACAAUAAgAAAB8AAAACAAYAAgAAAB8AAAACAAcAAgAAAB8AAAACAAgAAgAAAB8AAAACAAkAAgAAAB8AAAACAAoAAgAAAB8AAAACAAsAAgAAAB8AAAACAAwAAgAAAB8AAAACAA0AAgAAAB8AAAACAA4AAgAAAB8AAAADAAEAAgAAAB8AAAADAAIAAgAAAB8AAAADAAMAAgAAAB8AAAADAAQAAgACABwAAAADAAUAAgAAABwAAAADAAYAAgACABoAAAADAAcAAgACABoAAAADAAgAAgAAABsAAAADAAkAAgACAB4AAAADAAoAAgAAAB8AAAADAAsAAgAAAB8AAAADAAwAAgAAAB8AAAADAA0AAgAAAB8AAAADAA4AAgAAAB8AAAAEAAEAAgAAAB8AAAAEAAIAAgAAAB8AAAAEAAMAAgACABwAAAAEAAQAAgAAABwAAAAEAAUAAgACABUAAAAEAAYAAgADABYAAAAEAAcAAgADABYAAAAEAAgAAgACABcAAAAEAAkAAgAAABsAAAAEAAoAAgACAB4AAAAEAAsAAgAAAB8AAAAEAAwAAgAAAB8AAAAEAA0AAgAAAB8AAAAEAA4AAgAAAB8AAAAFAAEAAgAAAB8AAAAFAAIAAgACABwAAAAFAAMAAgAAABwAAAAFAAQAAgACABoAAAAFAAUAAgACABEAAAAFAAYAAgAAABEAAAAFAAcAAgAAABIAAAAFAAgAAgADABcAAAAFAAkAAgACABoAAAAFAAoAAgADAB4AAAAFAAsAAgAAAB8AAAAFAAwAAgAAAB8AAAAFAA0AAgAAAB8AAAAFAA4AAgAAAB8AAAAGAAEAAgAAAB8AAAAGAAIAAgAAABwAAAAGAAMAAgACABUAAAAGAAQAAgACABEAAAAGAAUAAgAAABEAAAAGAAYAAgAAAAgAAAAGAAcAAgABABQAAAAGAAgAAgACABMAAAAGAAkAAgACABoAAAAGAAoAAgADAB4AAAAGAAsAAgAAAB8AAAAGAAwAAgAAAB8AAAAGAA0AAgAAAB8AAAAGAA4AAgAAAB8AAAAHAAEAAgAAAB8AAAAHAAIAAgADAB0AAAAHAAMAAgADABYAAAAHAAQAAgAAABEAAAAHAAUAAgAAAAoAAAAHAAYAAgABAAkAAAAHAAcAAgACAAwAAAAHAAgAAgAAABIAAAAHAAkAAgADABcAAAAHAAoAAgAAAB0AAAAHAAsAAgAAAB8AAAAHAAwAAgAAAB8AAAAHAA0AAgAAAB8AAAAHAA4AAgAAAB8AAAAIAAEAAgAAAB8AAAAIAAIAAgADAB0AAAAIAAMAAgADABYAAAAIAAQAAgABABEAAAAIAAUAAgACAAMAAAAIAAYAAgAAAAEAAAAIAAcAAgADAAwAAAAIAAgAAgABAA8AAAAIAAkAAgADABYAAAAIAAoAAgABABoAAAAIAAsAAgAAAB8AAAAIAAwAAgAAAB8AAAAIAA0AAgAAAB8AAAAIAA4AAgAAAB8AAAAJAAEAAgAAAB8AAAAJAAIAAgADAB0AAAAJAAMAAgAEABUAAAAJAAQAAgADABEAAAAJAAUAAgADAAMAAAAJAAYAAgABAAEAAAAJAAcAAgADAAwAAAAJAAgAAgABAA8AAAAJAAkAAgADABcAAAAJAAoAAgABABsAAAAJAAsAAgACAB4AAAAJAAwAAgAAAB8AAAAJAA0AAgAAAB8AAAAJAA4AAgAAAB8AAAAKAAEAAgAAAB8AAAAKAAIAAgABABwAAAAKAAMAAgADABUAAAAKAAQAAgAAABEAAAAKAAUAAgADAAMAAAAKAAYAAgABAAEAAAAKAAcAAgAAAAgAAAAKAAgAAgABABQAAAAKAAkAAgACABMAAAAKAAoAAgACABcAAAAKAAsAAgACABoAAAAKAAwAAgAAAB0AAAAKAA0AAgAAAB8AAAAKAA4AAgAAAB8AAAALAAEAAgAAAB8AAAALAAIAAgAEABwAAAALAAMAAgADABUAAAALAAQAAgACAAoAAAALAAUAAgADAAMAAAALAAYAAgABAAIAAAALAAcAAgACAAUAAAALAAgAAgAAAAsAAAALAAkAAgAAABQAAAALAAoAAgACABMAAAALAAsAAgACABcAAAALAAwAAgADABoAAAALAA0AAgAAAB8AAAALAA4AAgAAAB8AAAAMAAEAAgAAAB8AAAAMAAIAAgAAAB8AAAAMAAMAAgADABUAAAAMAAQAAgADAAoAAAAMAAUAAgAAAAMAAAAMAAYAAgACAAEAAAAMAAcAAgAAAAIAAAAMAAgAAgACAAUAAAAMAAkAAgAAAAsAAAAMAAoAAgAAABIAAAAMAAsAAgADABYAAAAMAAwAAgABABsAAAAMAA0AAgACAB4AAAAMAA4AAgAAAB8AAAANAAEAAgAAAB8AAAANAAIAAgAAAB8AAAANAAMAAgADABUAAAANAAQAAgADAAoAAAANAAUAAgACAAEAAAANAAYAAgACAAEAAAANAAcAAgACAAEAAAANAAgAAgAAAAQAAAANAAkAAgABAAgAAAANAAoAAgABAA8AAAANAAsAAgADABYAAAANAAwAAgACABoAAAANAA0AAgADAB4AAAANAA4AAgAAAB8AAAAOAAEAAgAAAB8AAAAOAAIAAgACABwAAAAOAAMAAgADABUAAAAOAAQAAgADAAoAAAAOAAUAAgACAAEAAAAOAAYAAgACAAEAAAAOAAcAAgACAAEAAAAOAAgAAgADAAEAAAAOAAkAAgABAAgAAAAOAAoAAgABABQAAAAOAAsAAgACABMAAAAOAAwAAgACABcAAAAOAA0AAgADAB4AAAAOAA4AAgAAAB8AAAAPAAEAAgAAAB8AAAAPAAIAAgAAABwAAAAPAAMAAgADABUAAAAPAAQAAgADAAoAAAAPAAUAAgACAAEAAAAPAAYAAgACAAEAAAAPAAcAAgACAAEAAAAPAAgAAgABAAQAAAAPAAkAAgACAAgAAAAPAAoAAgACAAkAAAAPAAsAAgACABAAAAAPAAwAAgADABcAAAAPAA0AAgAAAB0AAAAPAA4AAgAAAB8AAAARAAEAAgADABwAAAARAAIAAgADABUAAAARAAMAAgAAABEAAAARAAQAAgADAAoAAAARAAUAAgABAAMAAAARAAYAAgACAAEAAAARAAcAAgABAAQAAAARAAgAAgADAAgAAAARAAkAAgAEAA4AAAARAAoAAgADABAAAAARAAsAAgAEABcAAAARAAwAAgACABoAAAARAA0AAgABAB0AAAARAA4AAgAAAB8AAAASAAEAAgADABwAAAASAAIAAgADABUAAAASAAMAAgACAA8AAAASAAQAAgACAAcAAAASAAUAAgAEAAMAAAASAAYAAgAEAAIAAAASAAcAAgAEAAUAAAASAAgAAgABAAsAAAASAAkAAgABAA8AAAASAAoAAgADABcAAAASAAsAAgADAB4AAAASAAwAAgAEABwAAAASAA0AAgAEAB4AAAASAA4AAgAAAB8AAAATAAEAAgAEABwAAAATAAIAAgADABUAAAATAAMAAgABABEAAAATAAQAAgAEAAoAAAATAAUAAgACAAgAAAATAAYAAgACAAgAAAATAAcAAgADAAwAAAATAAgAAgACAA8AAAATAAkAAgABABIAAAATAAoAAgADABcAAAATAAsAAgADAB4AAAATAAwAAgAAAB8AAAATAA0AAgAAAB8AAAATAA4AAgAAAB8AAAAUAAEAAgAAAB8AAAAUAAIAAgABABwAAAAUAAMAAgADABYAAAAUAAQAAgACAAoAAAAUAAUAAgACAAgAAAAUAAYAAgADAAkAAAAUAAcAAgAEAAwAAAAUAAgAAgABABIAAAAUAAkAAgAAABUAAAAUAAoAAgAEABcAAAAUAAsAAgACABsAAAAUAAwAAgAAAB8AAAAUAA0AAgAAAB8AAAAUAA4AAgAAAB8AAAAVAAEAAgAAAB8AAAAVAAIAAgAEABwAAAAVAAMAAgADABUAAAAVAAQAAgAEAAoAAAAVAAUAAgABAAoAAAAVAAYAAgADAAgAAAAVAAcAAgAEAA4AAAAVAAgAAgADABAAAAAVAAkAAgAAABUAAAAVAAoAAgADAB0AAAAVAAsAAgADAB4AAAAVAAwAAgAAAB8AAAAVAA0AAgAAAB8AAAAVAA4AAgAAAB8AAAAWAAEAAgAAAB8AAAAWAAIAAgAAAB8AAAAWAAMAAgADABUAAAAWAAQAAgABABEAAAAWAAUAAgAEAAoAAAAWAAYAAgAEAAgAAAAWAAcAAgABAA8AAAAWAAgAAgADABYAAAAWAAkAAgADABYAAAAWAAoAAgADABcAAAAWAAsAAgADAB4AAAAWAAwAAgAAAB8AAAAWAA0AAgAAAB8AAAAWAA4AAgAAAB8AAAAXAAEAAgAAAB8AAAAXAAIAAgAAAB8AAAAXAAMAAgACABoAAAAXAAQAAgADABYAAAAXAAUAAgABABEAAAAXAAYAAgACAA8AAAAXAAcAAgABABIAAAAXAAgAAgADABYAAAAXAAkAAgADABYAAAAXAAoAAgADABcAAAAXAAsAAgACABsAAAAXAAwAAgAAAB8AAAAXAA0AAgAAAB8AAAAXAA4AAgAAAB8AAAAYAAEAAgAAAB8AAAAYAAIAAgAAAB8AAAAYAAMAAgACABoAAAAYAAQAAgAEABUAAAAYAAUAAgADABYAAAAYAAYAAgADABYAAAAYAAcAAgADABYAAAAYAAgAAgADABYAAAAYAAkAAgADABYAAAAYAAoAAgACABoAAAAYAAsAAgACABoAAAAYAAwAAgACABsAAAAYAA0AAgAAAB8AAAAYAA4AAgAAAB8AAAAZAAEAAgAAAB8AAAAZAAIAAgAAAB8AAAAZAAMAAgABABwAAAAZAAQAAgACABoAAAAZAAUAAgAEABUAAAAZAAYAAgADABYAAAAZAAcAAgADABYAAAAZAAgAAgADABYAAAAZAAkAAgAEABcAAAAZAAoAAgACABoAAAAZAAsAAgACABsAAAAZAAwAAgAAAB8AAAAZAA0AAgAAAB8AAAAZAA4AAgAAAB8AAAAaAAEAAgAAAB8AAAAaAAIAAgAAAB8AAAAaAAMAAgAEABwAAAAaAAQAAgABABwAAAAaAAUAAgACABoAAAAaAAYAAgACABoAAAAaAAcAAgACABoAAAAaAAgAAgACABoAAAAaAAkAAgACABoAAAAaAAoAAgABAB0AAAAaAAsAAgAAAB8AAAAaAAwAAgAAAB8AAAAaAA0AAgAAAB8AAAAaAA4AAgAAAB8AAAAbAAEAAgAAAB8AAAAbAAIAAgAAAB8AAAAbAAMAAgAAAB8AAAAbAAQAAgAAAB8AAAAbAAUAAgABABwAAAAbAAYAAgACABoAAAAbAAcAAgACABoAAAAbAAgAAgAEABsAAAAbAAkAAgAEAB4AAAAbAAoAAgAAAB8AAAAbAAsAAgAAAB8AAAAbAAwAAgAAAB8AAAAbAA0AAgAAAB8AAAAbAA4AAgAAAB8AAAAcAAEAAgAAAB8AAAAcAAIAAgAAAB8AAAAcAAMAAgAAAB8AAAAcAAQAAgAAAB8AAAAcAAUAAgAAAB8AAAAcAAYAAgAAAB8AAAAcAAcAAgAAAB8AAAAcAAgAAgAAAB8AAAAcAAkAAgAAAB8AAAAcAAoAAgAAAB8AAAAcAAsAAgAAAB8AAAAcAAwAAgAAAB8AAAAcAA0AAgAAAB8AAAAcAA4AAgAAAB8AAAA=")
tile_set = SubResource("TileSet_buasj")
script = ExtResource("2_fvnuu")
tile_size = Vector2(32, 32)

[node name="CanvasLayer" type="CanvasLayer" parent="." node_paths=PackedStringArray("gridcontainer", "tilemap")]
script = ExtResource("4_j5su3")
gridcontainer = NodePath("GridContainer")
tilemap = NodePath("../TileMapLayer")

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -52.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
color = Color(0.403922, 0.509804, 0, 1)

[node name="GridContainer" type="GridContainer" parent="CanvasLayer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -8.0
offset_top = -36.0
offset_right = 8.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 8
columns = 2

[node name="UI_Tile" parent="CanvasLayer/GridContainer" instance=ExtResource("5_mvtnu")]
layout_mode = 2
texture = ExtResource("1_72vrb")
tile_name = "Grass"
description = "This is Grass!"

[node name="UI_Tile2" parent="CanvasLayer/GridContainer" instance=ExtResource("5_mvtnu")]
layout_mode = 2
texture = ExtResource("2_v1vw5")
tile_name = "Water"
tile_id = 1
description = "This is Water!"

[node name="Description" type="ColorRect" parent="CanvasLayer"]
offset_left = 834.0
offset_top = 450.0
offset_right = 915.0
offset_bottom = 528.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="TileName" type="RichTextLabel" parent="CanvasLayer/Description"]
layout_mode = 0
offset_right = 80.0
offset_bottom = 24.0

[node name="TileDescription" type="RichTextLabel" parent="CanvasLayer/Description"]
layout_mode = 0
offset_top = 30.0
offset_right = 80.0
offset_bottom = 79.0

[connection signal="tile_placed" from="TileMapLayer" to="CanvasLayer" method="_on_tile_map_layer_tile_placed"]
[connection signal="ui_tile_selected" from="CanvasLayer/GridContainer/UI_Tile" to="CanvasLayer" method="_on_ui_tile_selected"]
[connection signal="ui_tile_selected" from="CanvasLayer/GridContainer/UI_Tile2" to="CanvasLayer" method="_on_ui_tile_selected"]
